[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypt_tool"
version = "0.1.1"
authors = [
    { name = "Guo Fei", email = "me@guofei.site" }
]
description = "A versatile and efficient cryptography library implemented in Python"
readme = "README.md"
license = { text = "MIT" }
homepage = "https://github.com/guofei9987/CryptTool"
repository = "https://github.com/guofei9987/CryptTool"


[dependencies]
