[package]
name = "CryptTool"
version = "0.1.3"
edition = "2021"
authors = ["Guo Fei <me@guofei.site>"]
description = "A versatile and efficient cryptography library implemented in Rust"
license = "MIT"
repository = "https://github.com/guofei9987/CryptTool"
keywords = ["LCG", "Chiper"]


[lib]
name = "crypt_tool"
path = "src/lib.rs"

[dev-dependencies]
rand = "0.8"
criterion = "0.5.1"


[[bench]]
name = "bench_rng"
harness = false